objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <label>Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - Dateformat</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - Date format</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyIssueHierRequirements__c</fullName>
        <label>SurveyIssueHierRequirements</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Alert_Message__c</columns>
        <columns>Required__c</columns>
        <columns>Active__c</columns>
        <columns>SurveyIssueHierRequirements__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>SurveyId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>